# FLPInspect

./: .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  mkdocs.yml  requirements.txt  setup.cfg
.github/workflows/: docs.yml
docs/: index.md  installation.md  requirements.txt  screenshots.md
flpinspect/: __main__.py  constants.py  gui_logger.py  inspector.py  treeview.py
